@@ -1223,29 +1223,18 @@ describe Braintree::PaymentMethod do
     end
 
     context "coinbase accounts" do
-      it "can make a coinbase account the default payment method" do
+      it "cannot create a payment method token with Coinbase" do
         customer = Braintree::Customer.create!
-        result = Braintree::CreditCard.create(
-          :customer_id => customer.id,
-          :number => Braintree::Test::CreditCardNumbers::Visa,
-          :expiration_date => "05/2009",
-          :options => {:make_default => true}
-        )
-        result.should be_success
 
         nonce = Braintree::Test::Nonce::Coinbase
-        original_token = Braintree::PaymentMethod.create(
+        result = Braintree::PaymentMethod.create(
           :payment_method_nonce => nonce,
           :customer_id => customer.id
-        ).payment_method.token
-
-        updated_result = Braintree::PaymentMethod.update(
-          original_token,
-          :options => {:make_default => true}
         )
 
-        updated_customer = Braintree::Customer.find(customer.id)
-        updated_customer.default_payment_method.token.should == original_token
+        result.should_not be_success
+
+        result.errors.for(:coinbase_account).first.code.should == Braintree::ErrorCodes::PaymentMethod::PaymentMethodNoLongerSupported
       end
     end
 
